--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,15 @@
-{% include comments.html %}
+---
+layout: default
+---
+<article class="post">
+  <h1>{{ page.title }}</h1>
+  <p class="post-meta">{{ page.date | date: "%d.%m.%Y" }}</p>
+  
+  <div class="post-content">
+    {{ content }}
+  </div>
+  
+  <div class="post-comments">
+    {% include comments.html %}
+  </div>
+</article>
